Fix whitespace

--- a/styles/index.css
+++ b/styles/index.css
@@ -670,7 +670,8 @@ ul {
 ol > li::marker {
   content: counters(ordered, '.');
 }
-summary::marker { content: '🔴' }
+summary::marker
+  { content: '🔴' }
 dd, dt, li
   { background-color: Canvas }
 dt { }
